tests/variance/invariance.stderr
error: lifetime may not live long enough
  --> tests/variance/invariance.rs:11:5
   |
10 | fn shrink<'a, 'b: 'a>(long: ErasedInv<'b>, _short: &'a String) -> ErasedInv<'a> {
   |           --  -- lifetime `'b` defined here
   |           |
   |           lifetime `'a` defined here
11 |     long
   |     ^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
